css/gametv.custom.css
#videosources .ui-li-thumb {
  width: 66px;
  height: 66px;
  background: url('../img/videosources/_default.png');
}

@media (-webkit-min-device-pixel-ratio:2){
  #videosources .ui-li-thumb {
    background: url('../img/videosources/_default@2x.png');
    background-size: 66px 66px;
  }
}

#videosources .ui-li-has-thumb .ui-btn-inner a.ui-link-inherit {
  padding-left: 82px;
}

#videos .ui-li-thumb {
  min-width: 116px;
  max-width: 116px;
  min-height: 66px;
  max-height: 66px;
}

#videos .ui-li-has-thumb .ui-btn-inner a.ui-link-inherit {
  padding-left: 130px;
  padding-top: 0;
  padding-bottom: 0;
}

li.ui-btn {
  min-height: 66px;
  max-height: 66px;
}

.ui-li-heading {
  white-space: normal;
  margin-top: 0.7em;
}

.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-thumb {
  min-height: 40px;
}

.ui-li-heading {
  font-size: 14px;
  font-weight: normal;
}

.ui-btn-up-c, .ui-btn-hover-c, .ui-btn-down-c {
  border: 0;
}

.ui-li-thumb, .ui-listview .ui-li-icon {
  left: 0;
}

.ui-btn-inner {
  border-top: 0;
}

.ui-li-desc {
  color: #bbb;
}

.ui-content .ui-listview-inset {
  margin:0;
}

#popupPanel-popup {
  right: 0 !important;
  left: auto !important;
}

#popupPanel {
  width: 200px;
  border: 1px solid #000;
  border-right: none;
  background: rgba(0,0,0,.5);
  margin: -1px 0;
}

#popupPanel .ui-btn {
  margin: 2em 15px;
}

#share {
  width: 300px;
}

.antenna {
  width: 100%;
  height: 24px;
  background: url('../img/antenna.png') no-repeat bottom;
  position: relative;
}

@media (-webkit-min-device-pixel-ratio:2){
  .antenna {
    background-image: url('../img/antenna@2x.png');
    background-size: 36px 20px;
  }
}

#videoplayer .ui-block-a {
  text-align: left;
}

#videoplayer .ui-block-b {
  text-align: left;
  margin-top: 23px;
}

#videoplayer #description {
  font-size: 0.8em;
}

#mailbody {
  font-size: 0.9em;
}

#videoplayer #sharebyemail {
  margin-right: 17px;
  margin-top: -17px;
}

#videoplayer #tweetClickHijacker {
  position: relative;
  width:122px;
  height: 30px;
  /*margin-top:-34px;*/
  /*margin-left: 92px;*/
  cursor: pointer;
  border: 1px solid #ccc;
}

